# sst-rust-arm64-compilation

./: Cargo.toml  sst.config.ts
src/: demo.rs
